# safe-docker

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  USECASE_ANALYSIS.md  codecov.yml
.github/: dependabot.yml
.github/instructions/: *.instructions.md
.github/workflows/: audit.yml  ci.yml  release.yml
benches/: benchmark.rs
docs/: ATTACK_SURFACE_ANALYSIS.md  AUDIT_DESIGN.md  AUDIT_VERIFICATION.md  COMPARATIVE_ANALYSIS.md  CONTRIBUTING.md  OPA_DOCKER_AUTHZ.md  REVIEW-TRACKER.md  ROADMAP.md  SUPPLY_CHAIN_SECURITY.md
opa/: authz.rego
scripts/: pre-commit
src/: audit.rs  compose.rs  config.rs  docker_args.rs  error.rs  hook.rs  main.rs  otlp_types.rs  path_validator.rs  policy.rs  setup.rs  shell.rs  test_utils.rs  wrapper.rs
tests/: integration_test.rs  opa_consistency_test.rs  proptest_test.rs  security_test.rs  wrapper_test.rs
