[package]
name = "safe-docker"
version = "0.1.0"
edition = "2024"
description = "Claude Code PreToolUse hook to prevent Docker bind mounts outside $HOME"
license = "MIT OR Apache-2.0"

[features]
default = []
otlp = ["dep:opentelemetry-proto"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yml = "0.0.12"
shell-words = "1"
dirs = "6"
thiserror = "2"
regex = "1"
log = "0.4"
env_logger = "0.11"
gethostname = "1"

[dependencies.opentelemetry-proto]
version = "0.31"
optional = true
default-features = false
features = ["logs", "gen-tonic-messages", "with-serde"]

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
