[package]
name = "safe-docker"
version = "0.8.0"
edition = "2024"
rust-version = "1.88"
description = "Safe Docker command wrapper and Claude Code hook for container security"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nekoruri/safe-docker"
readme = "README.md"
keywords = ["docker", "security", "cli", "container", "hook"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = []
otlp = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"
serde_yaml_ng = "0.10"
shell-words = "1"
dirs = "6"
thiserror = "2"
regex = "1"
log = "0.4"
env_logger = "0.11"
gethostname = "1"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
proptest = "1"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
